# CS2014-Systems-Programming-

./: Lab1-sorts-new.c  Lab2&3-prepostinfixCalc-final version.c  Lab4-Bitvector-main.c  lab1-sorts.c  lab2-prepostinfixCalc.c
Lab 5- Bloom Filters/bitvector-empty-function/: CMakeLists.txt  Makefile  bitset.c  bitset.h  bloom.c  bloom.h  input1.txt  input2.txt  main.c  runtest  test_out1  test_out2
Lab 6-Huffman coding/huff/: CMakeLists.txt  Makefile  huff  huff.c  huff.h  main.c
Lab 7-Encoding and Decoding/student-huff/: CMakeLists.txt  Makefile  README.md  bitfile.c  bitfile.h  huff.c  main.c
